<resources>
        <string name="app_name">Matrimony_demo</string>
        <string name="todo">TODO</string>
        <string name="lbl_registration">Registration</string>
        <string name="lbl_list">List</string>
        <string name="lbl_favourite">Favourite</string>
        <string name="lbl_search">Search</string>
        <string name="lbl_dashboard">Dashboard</string>
        <string name="lbl_enter_first_name">Enter First Name</string>
        <string name="hint_enter_middle_name">Enter Middle Name</string>
        <string name="hint_enter_last_name">Enter Last Name</string>
        <string name="lbl_male">Male</string>
        <string name="lbl_female">Female</string>
        <string name="lbl_gender">Gender</string>
        <string name="lbl_select_dob">Select DOB</string>
        <string name="lbl_enter_phone_number">Enter Phone Number</string>
        <string name="lbl_enter_email">Enter Email Address</string>
        <string name="lbl_select_city">Select City</string>
        <string name="lbl_select_language">Select Language</string>
        <string name="lbl_add_user">Add User</string>
        <string name="lbl_select_one">Select One</string>
        <string name="lbl_name">Enter Name</string>
        <string name="error_language_select">Select Language</string>
        <string name="error_city_select">Select City</string>
        <string name="error_valid_email">Enter Valid Email Address</string>
        <string name="error_enter_email">Enter Email Address</string>
        <string name="error_valid_mobile_number">Enter Valid Mobile Number</string>
        <string name="error_enter_mobile_number">Enter Mobile Number</string>
        <string name="error_first_name">Enter First Name</string>
        <string name="error_middle_name">Enter Middle Name</string>
        <string name="error_Last_name">Enter Last Name</string>
        <string name="lbl_edit_user">Edit User</string>
        <string name="hint_search_user">Search User</string>
        <string name="lbl_search_user">Search User</string>
        <string name="lbl_pls_wait">Please Wait</string>
        <string name="lbl_user_list">User List</string>
        <string name="lbl_matrimony">Matrimony</string>
    <string name="lbl_favourite_user">favourite user</string>
        <string name="lbl_delete_data">delete data</string>
    <string name="lbl_no_data_found">No Data Found</string>
    <string name="favourite_list_activity_name">Favourite List</string>
</resources>