<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <include layout="@layout/custom_tool_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvActRegistration"
                style="@style/dashboard_card_style">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/dashboard_icon_size"
                        android:layout_height="@dimen/dashboard_icon_size"
                        android:src="@mipmap/ic_registration" />

                    <TextView
                        style="@style/dashboard_text_style"
                        android:textStyle="bold"
                        android:text="@string/lbl_registration" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvActList"
                style="@style/dashboard_card_style">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/dashboard_icon_size"
                        android:layout_height="@dimen/dashboard_icon_size"
                        android:src="@mipmap/ic_userlist" />

                    <TextView
                        style="@style/dashboard_text_style"
                        android:textStyle="bold"
                        android:text="@string/lbl_user_list" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvActFavourite"
                style="@style/dashboard_card_style">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/dashboard_icon_size"
                        android:layout_height="@dimen/dashboard_icon_size"
                        android:src="@mipmap/ic_favourite" />

                    <TextView
                        style="@style/dashboard_text_style"
                        android:textStyle="bold"
                        android:text="@string/lbl_favourite" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvActSearch"
                style="@style/dashboard_card_style">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/dashboard_icon_size"
                        android:layout_height="@dimen/dashboard_icon_size"
                        android:src="@mipmap/ic_search" />

                    <TextView
                        style="@style/dashboard_text_style"
                        android:textStyle="bold"
                        android:text="@string/lbl_search" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
    <TextView
        style="@style/dashboard_text_style"
        android:textStyle="bold"
        android:text="Contact us : XYZ@gmail.com or 987654321"
        />

</LinearLayout>