<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/custom_tool_bar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/couple"
            android:layout_width="100dp"
            android:layout_height="@dimen/dp_100"
            android:src="@mipmap/ic_registration_logo"
            android:layout_gravity="center" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/screen_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:text="@string/lbl_enter_first_name"
                        android:textColor="@color/Black"
                        android:textSize="@dimen/sp_13" />

                    <include layout="@layout/coma_text_view" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etFirstName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:inputType="textCapCharacters"
                        android:textColor="@color/Black"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:text="@string/hint_enter_middle_name"
                        android:textColor="@color/Black"
                        android:textSize="13sp" />

                    <include layout="@layout/coma_text_view" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etMiddleName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:inputType="textCapCharacters"
                        android:textColor="@color/Black"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:text="@string/hint_enter_last_name"
                        android:textColor="@color/Black"
                        android:textSize="13sp" />

                    <include layout="@layout/coma_text_view" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etLastName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:inputType="textPersonName|textCapWords"
                        android:selectAllOnFocus="true"
                        android:textColor="@color/Black"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_gender"
                        android:textStyle="bold"
                        android:textColor="@color/Black"
                        android:textSize="13sp" />

                    <include layout="@layout/coma_text_view" />

                    <RadioGroup
                        android:id="@+id/rgGender"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:orientation="horizontal">

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/rbMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/lbl_male"
                            android:textStyle="bold"
                            android:textColor="@color/Black"
                            android:textSize="13sp" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/rbFeMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_10"
                            android:textStyle="bold"
                            android:text="@string/lbl_female"
                            android:textColor="@color/Black"
                            android:textSize="13sp" />
                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_5"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_select_dob"
                        android:textStyle="bold"
                        android:textColor="@color/Black"
                        android:textSize="13sp" />

                    <include layout="@layout/coma_text_view" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDateOfBirth"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:clickable="true"
                        android:focusable="false"
                        android:textColor="@color/Black"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:text="@string/lbl_enter_phone_number"
                        android:textColor="@color/Black"
                        android:textSize="13sp" />

                    <include layout="@layout/coma_text_view" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etMobileNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:digits="0123456789"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:textColor="@color/Black"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:text="@string/lbl_enter_email"
                        android:textColor="@color/Black"
                        android:textSize="13sp" />

                    <include layout="@layout/coma_text_view" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmailAddress"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/Black"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_select_city"
                        android:textStyle="bold"
                        android:textColor="@color/Black"
                        android:textSize="13sp" />

                    <include layout="@layout/coma_text_view" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1.2"
                        android:background="@drawable/spinner_background"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/spCity"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:spinnerMode="dropdown"
                            android:textColor="@color/Black"
                            android:textSize="13sp" />

                        <!--<ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginRight="@dimen/dp_10"
                            android:onClick="showDropDown"
                            android:src="@drawable/ic_base_line_arrow_dropdown_black" />-->
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_select_language"
                        android:textStyle="bold"
                        android:textColor="@color/Black"
                        android:textSize="13sp" />

                    <include layout="@layout/coma_text_view" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1.2"
                        android:background="@drawable/spinner_background"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/spLanguage"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:spinnerMode="dropdown"
                            android:textColor="@color/Black"
                            android:textSize="13sp" />

                        <!--<ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginRight="@dimen/dp_10"
                            android:onClick="showDropDown"
                            android:src="@drawable/ic_base_line_arrow_dropdown_black" />-->
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:background="@color/DarkRed"
                    android:text="Submit"
                    android:textStyle="bold"
                    android:textColor="@color/White"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>
        </FrameLayout>
    </ScrollView>
</LinearLayout>